[SYNCOPE-1418] All based on Spring Boot now