@@ -395,6 +395,7 @@ under the License.
 
     <spring.version>5.1.4.RELEASE</spring.version>
     <spring-security.version>5.1.3.RELEASE</spring-security.version>
+    <spring-boot.version>2.1.2.RELEASE</spring-boot.version>
 
     <openjpa.version>3.0.0</openjpa.version>
     <hikaricp.version>3.3.0</hikaricp.version>
@@ -416,6 +417,9 @@ under the License.
     <opensaml.version>3.3.0</opensaml.version>
 
     <elasticsearch.version>6.5.4</elasticsearch.version>
+
+    <apacheds.version>2.0.0.AM25</apacheds.version>
+    <apachedirapi.version>2.0.0.AM2</apachedirapi.version>
 
     <log4j.version>2.11.1</log4j.version>
     <disruptor.version>3.4.2</disruptor.version>
@@ -465,6 +469,7 @@ under the License.
     <wicket.version>8.2.0</wicket.version>
     <wicket-jqueryui.version>8.1.0</wicket-jqueryui.version>
     <wicket-bootstrap.version>2.0.6</wicket-bootstrap.version>
+    <wicket-spring-boot.version>2.1.5</wicket-spring-boot.version>
 
     <angular.version>1.7.5</angular.version>
     <angular-resource.version>1.7.0</angular-resource.version>
@@ -519,7 +524,7 @@ under the License.
     <jdbc.postgresql.version>42.2.5</jdbc.postgresql.version>
     <jdbc.mysql.version>5.1.47</jdbc.mysql.version>
     <jdbc.mariadb.version>2.3.0</jdbc.mariadb.version>
-    <jdbc.mssql.version>6.4.0.jre</jdbc.mssql.version>
+    <jdbc.mssql.version>7.0.0.jre</jdbc.mssql.version>
 
     <adminUser>admin</adminUser>
     <anonymousUser>anonymous</anonymousUser>
@@ -561,13 +566,13 @@ under the License.
       <dependency> 
         <groupId>javax.servlet</groupId> 
         <artifactId>javax.servlet-api</artifactId> 
-        <version>3.1.0</version>
+        <version>4.0.1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>javax.servlet.jsp</groupId>
         <artifactId>javax.servlet.jsp-api</artifactId>
-        <version>2.3.1</version>
+        <version>2.3.3</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -674,21 +679,76 @@ under the License.
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-core</artifactId>
         <version>${camel.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-spring</artifactId>
         <version>${camel.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-spring-javaconfig</artifactId>
+        <version>${camel.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-script</artifactId>
         <version>${camel.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-metrics</artifactId>
         <version>${camel.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <!-- /Camel -->
       
@@ -884,8 +944,68 @@ under the License.
       </dependency>
 
       <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring-boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot</artifactId>
+        <version>${spring-boot.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-autoconfigure</artifactId>
+        <version>${spring-boot.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-spring-boot-starter-jaxrs</artifactId>
+        <version>${cxf.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+
+      <dependency>
+        <groupId>com.giffing.wicket.spring.boot.starter</groupId>
+        <artifactId>wicket-spring-boot-starter</artifactId>
+        <version>${wicket-spring-boot.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-beans</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jcl</artifactId>
         <version>${spring.version}</version>
       </dependency>
       <dependency>
@@ -916,6 +1036,11 @@ under the License.
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
         <version>${spring.version}</version>
       </dependency>
       <dependency>
@@ -1077,7 +1202,7 @@ under the License.
       <dependency>
         <groupId>org.apache.directory.server</groupId>
         <artifactId>apacheds-service</artifactId>
-        <version>2.0.0.AM25</version>
+        <version>${apacheds.version}</version>
       </dependency>
       
       <dependency>
@@ -1868,21 +1993,26 @@ under the License.
         </plugin>
         
         <plugin>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+          <version>${spring-boot.version}</version>
+        </plugin>
+        
+        <plugin>
           <groupId>org.codehaus.cargo</groupId>
           <artifactId>cargo-maven2-plugin</artifactId>
           <version>1.7.1</version>
           <configuration>
-            <container>
-              <containerId>tomcat9x</containerId>
-              <zipUrlInstaller>
-                <url>http://central.maven.org/maven2/org/apache/tomcat/tomcat/${tomcat.version}/tomcat-${tomcat.version}.zip</url>
-                <downloadDir>${settings.localRepository}/org/codehaus/cargo/cargo-container-archives</downloadDir>
-                <extractDir>${project.build.directory}/cargo/extract</extractDir>
-              </zipUrlInstaller>
-              <timeout>300000</timeout>
-              <log>${cargo.log}</log>
-              <output>${cargo.output}</output>    
-            </container>
+            <configuration>
+              <type>standalone</type>
+              <properties>
+                <cargo.servlet.port>${cargo.servlet.port}</cargo.servlet.port>
+                <cargo.tomcat.ajp.port>${cargo.tomcat.ajp.port}</cargo.tomcat.ajp.port>
+                <cargo.rmi.port>${cargo.rmi.port}</cargo.rmi.port>
+
+                <cargo.jvmargs>-XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -Xmx1024m -Xms512m</cargo.jvmargs>
+              </properties>
+            </configuration>
           </configuration>
         </plugin>
         
@@ -2105,6 +2235,7 @@ under the License.
             <exclude>**/deb/control/control</exclude>
             <exclude>**/*.lst</exclude>
             <exclude>**/*.json</exclude>
+            <exclude>**/banner.txt</exclude>
             <exclude>**/target/**</exclude>
           </excludes>
         </configuration>
@@ -2145,7 +2276,7 @@ under the License.
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${project.build.directory}/classes/META-INF</outputDirectory>
+              <outputDirectory>${project.build.outputDirectory}/META-INF</outputDirectory>
               <resources>
                 <resource>
                   <directory>${rootpom.basedir}</directory>
@@ -2517,7 +2648,7 @@ under the License.
         <dependency>
           <groupId>javax.xml.bind</groupId>
           <artifactId>jaxb-api</artifactId>
-          <version>2.3.0</version>
+          <version>2.3.1</version>
         </dependency>
         <dependency>
           <groupId>com.sun.xml.bind</groupId>
@@ -2532,12 +2663,12 @@ under the License.
         <dependency>
           <groupId>javax.annotation</groupId>
           <artifactId>javax.annotation-api</artifactId>
-          <version>1.3.1</version>
+          <version>1.3.2</version>
         </dependency>
         <dependency>
           <groupId>javax.xml.ws</groupId>
           <artifactId>jaxws-api</artifactId>
-          <version>2.3.0</version>
+          <version>2.3.1</version>
         </dependency>
         <dependency>
           <groupId>javax.activation</groupId>
